Now the plugins have the code synced with the JDAExpansion like Bukkit.